# postprocessor

./: CLAUDE.md  CMakeLists.txt  config_utils.py
.claude/: settings.json
.claude/commands/: check-registration.md  fact-check.md  install-processor.md  logs.md  new-processor.md  register-processor.md  setup.md
.claude/docs/: external_postprocessors_json.md  input_from_ai_manager.md  output_to_ai_manager.md
message_processing_utils/anpr/: __init__.py
message_processing_utils/anpr/detector/: __init__.py  event_cache.py
message_processing_utils/anpr/detector/tests/: test_event_cache.py
message_processing_utils/general/ocr/: cache.py  config.py  worker_pool.py
message_processing_utils/general/ocr/tests/: test_cache.py
postprocessor-cloud-inference-example/: CMakeLists.txt
postprocessor-python-anpr-example/: CMakeLists.txt  README.md  plugin.anpr.ini.example  postprocessor-python-anpr-example.py  test_postprocessor_python_anpr_example.py
postprocessor-python-clip-example/: CMakeLists.txt
postprocessor-python-confidences-example/: CMakeLists.txt
postprocessor-python-edgeimpulse-example/: CMakeLists.txt
postprocessor-python-events-example/: CMakeLists.txt
postprocessor-python-example/: CMakeLists.txt
postprocessor-python-height-estimator/: CMakeLists.txt  README.md  plugin.height-estimator.ini.example  postprocessor-python-height-estimator.py
postprocessor-python-image-example/: CMakeLists.txt
postprocessor-python-measure-average-car-speed/: CMakeLists.txt  postprocessor-python-measure-average-car-speed.py  test_postprocessor_python_measure_average_car_speed.py
postprocessor-python-metadata-exporter/: CMakeLists.txt  README.md  install.ps1  postprocessor-python-metadata-exporter.py  requirements.txt
postprocessor-python-metadata-exporter/deploy/: 1-package.ps1  2-deploy.ps1  README.md  external_postprocessors.entry.json
postprocessor-python-metadata-exporter/deploy/payload/: README.md  plugin.metadata-exporter.ini
postprocessor-python-metadata-exporter/sample-backend/: .gitignore  README.md  app.py
postprocessor-python-noresponse-example/: CMakeLists.txt
postprocessor-python-object-counter-threshold/: CMakeLists.txt  README.md  postprocessor-python-object-counter-threshold.py
postprocessor-python-settings-example/: CMakeLists.txt
postprocessor-python-web-dashboard/: CMakeLists.txt  README.md  plugin.web-dashboard.ini.example  postprocessor-python-web-dashboard.py  web_app.py
preprocessor-python-clip-example/: CMakeLists.txt
preprocessor-python-image-example/: CMakeLists.txt
preprocessor-python-tensor-example/: CMakeLists.txt
